// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GIVEN image link > WHEN assetPrefix is NOT set > %p HTML: ASSET_PREFIX_SET: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo<a aria-hidden="true" class="anchor-heading icon-link" href="#foo"></a></h1>
<p><img src="/some-image-link.png" alt="some-image"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="/notes/foo.ch1">Ch1</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`GIVEN image link > WHEN assetPrefix is set and and image url is not local  > %p HTML: REMOTE_IMAGE: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo<a aria-hidden="true" class="anchor-heading icon-link" href="#foo"></a></h1>
<p><img src="https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/not-sprouted.png" alt="second-image"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="/some-prefix/notes/foo.ch1">Ch1</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`GIVEN image link > WHEN assetPrefix set > %p HTML: ASSET_PREFIX_SET: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo<a aria-hidden="true" class="anchor-heading icon-link" href="#foo"></a></h1>
<p><img src="/some-prefix/some-image-link.png" alt="some-image"></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="/some-prefix/notes/foo.ch1">Ch1</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;
